JSAI/error/src/test/resources/base/v017.js
var x, y, z;
x = 4, (y = 5);
z = x+y;
print(z);